--- a/PdfWatermark/Properties/launchSettings.json
+++ b/PdfWatermark/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "PdfWatermark": {
       "commandName": "Project",
-      "commandLineArgs": "0"
+      "commandLineArgs": "0 false \"E:\\Results Folder\""
     }
   }
 }
