--- a/PdfWatermark/PdfWatermark.csproj
+++ b/PdfWatermark/PdfWatermark.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Crayon" Version="2.0.60" />
     <PackageReference Include="itext7" Version="7.1.14" />
   </ItemGroup>
 
