--- a/PdfWatermark/Properties/launchSettings.json
+++ b/PdfWatermark/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "PdfWatermark": {
       "commandName": "Project",
-      "commandLineArgs": "0 \"E:\\Results Folder\" \"E:\\Loan Securitization\" \"E:\\list_of_loans.csv\""
+      "commandLineArgs": "0 \"E:\\Results Folder\" \"E:\\Loan Securitization\" \"E:\\unique_ids.csv\""
     }
   }
 }
